// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attribute-based modifier 1`] = `
  () => <Foo className="Foo_krj hasWhiteText_3j6" />;
  css(\`
  	.Foo_krj {
  		background: red;
  	}
  	.hasWhiteText_3j6 {
  		color: white;
  	}
  \`);
`;

exports[`Explicitly use modifier 1`] = `
  () => (
    <Fragment>
      <Baz className="Baz_6sh Foo_krj" />
      <Foo className="Foo_krj" />
    </Fragment>
  );
  
  css(\`
  	.Baz_6sh {
  		color: red;
  	}
  	.Foo_krj {
  		color: blue;
  	}
  \`);
`;

exports[`Nested modifier 1`] = `
  () => (
    <Fragment>
      <Foo className="Foo_krj" />
      <Bar>
        <Foo className="Foo_52k Foo_krj" />
      </Bar>
    </Fragment>
  );
  
  css(\`
  	.Foo_krj {
  		color: red;
  	}
  	.Foo_52k {
  		color: blue;
  	}
  \`);
`;

exports[`Simple modifier 1`] = `
  () => <Foo className="Foo_krj" />;
  css(\`
  	.Foo_krj {
  		color: red;
  	}
  \`);
`;
